Project

General

Profile

Actions

Bug #19361

closed

crush: new fields encoded when luminous feature is missing

Added by Yuri Weinstein about 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Immediate
Category:
-
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
upgrade/kraken-x
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Run: http://pulpito.ceph.com/teuthology-2017-03-22_03:25:11-upgrade:kraken-x-master-distro-basic-ovh/
Jobs: ['930637', '930622', '930616', '930610', '930627', '930624']

cluster [WRN] failed to encode map e7 with expected crc" in cluster log
Actions #2

Updated by Yuri Weinstein about 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee changed from Sage Weil to Yuri Weinstein
Actions #3

Updated by Sage Weil about 7 years ago

  • Subject changed from should we white-list "cluster [WRN] failed to encode map e7 with expected crc"" ? to crush: new fields encoded when luminous feature is missing
  • Priority changed from Normal to Immediate
Actions #4

Updated by Sage Weil about 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF